WIP: Alterar documentção swagger e arrrumar logout
