# src/Administration/Application/Employee/Dtos/CreateEmployeeInputDto.php
@@ -5,10 +5,10 @@ namespace Src\Administration\Application\Employee\Dtos;
 final class CreateEmployeeInputDto
 {
     public function __construct(
-        readonly string $name,
-        readonly string $email,
-        readonly string $password,
-        readonly int $type,
+        readonly ?string $name,
+        readonly ?string $email,
+        readonly ?string $password,
+        readonly ?int $type,
     ) {
     }
 }
